--- a/game-app/src/app/app.component.html
+++ b/game-app/src/app/app.component.html
@@ -1,21 +1,6 @@
-<div class="container">
-  <div class="jumbotron">
-    <h1>{{title}}</h1>
-  </div>
+<div class = "container">
+ <h1>  {{title}}</h1>
 </div>
 
-<div class = "row">
-    <div class="panel panel-primary">
-      <div class="panel-heading">Players Ranking</div>
-      <div class="panel-heading">
-        <a routerLink="./adminlogin" routerLinkActive="active">
-          Admin</a>
-      </div>
-    </div>
-  </div>
 
-<div class="container">
-  <app-player-list></app-player-list>
-</div>
-    
-  
+<router-outlet></router-outlet>
