--- a/game-app/src/app/component/adminlogin/adminlogin.component.html
+++ b/game-app/src/app/component/adminlogin/adminlogin.component.html
@@ -1,13 +1,17 @@
-
-<div class="container">
-  <h1>{{title}}</h1>
-<form name="loginForm">
-Login: <input type="text" ng-model="login">
-<br>
-<br>
-Password:<input type="password" ng-model="password">
-<br>
-<br>
-<input type="submit" value="Login" > </form>
-
+<div class = "container">
+  <div class ="card mt-5" style="margin:auto;width:600px;">
+    <div class= "card-body">
+      <h3 class = "card-title">Login Page </h3>
+      <div class="form-group">
+        <label for="login"> Login: </label><br>
+        <input type="text" id="login" placeholder="Enter your login">
+      </div>
+    <div class="form-group">
+      <label for="password">Password: </label><br>
+      <input type="password" class="form-controle" id="password" placeholder="Password">
+    </div>
+    <br>
+    <button type="submit" class="btn btn-primary" >Login</button>
+    </div>
+  </div>
 </div>
