--- a/game-app/src/app/component/adminlogin/adminlogin.component.scss
+++ b/game-app/src/app/component/adminlogin/adminlogin.component.scss
@@ -1,10 +1,9 @@
 .container{
-
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
     padding: 10px;
     height: auto;
     width: 300px;
     
     }
-    .container.h1{
-        text-align: center;
-    }
+ 
