--- a/game-app/src/app/component/header/header.component.html
+++ b/game-app/src/app/component/header/header.component.html
@@ -1,13 +1,3 @@
-<div class="panel panel-primary">
-  <div class = "row align-items-center">
-      <div class = "col">        
-  <div class="panel-heading">
-    <h3> Players Ranking</h3>
-  </div>
+<div class = "container">
+  {{title}}
 </div>
-<div class = "col">   
-   <div class="panel-heading">
-     <h3> Admin</h3> </div>
-</div>
-</div>
-
