--- a/game-app/src/app/app.component.html
+++ b/game-app/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class = "container">
- <h1>  {{title}}</h1>
-</div>
-
-
+<div class="container">
+    <div class="jumbotron">
+      <h1>{{title}}</h1>
+    </div>
+  </div>
 <router-outlet></router-outlet>
