--- a/game-app/src/app/component/mainpage/mainpage.component.html
+++ b/game-app/src/app/component/mainpage/mainpage.component.html
@@ -1,12 +1,15 @@
 <div class="panel panel-primary">
   <div class = "row align-items-center">
-      <div class = "col">        
-  <div class="panel-heading">
-    <a routerLink = "/player-list"><h2> Players Ranking</h2></a>
+    <div class = "col">        
+      <div class="panel-heading">           
+        <a routerLink = "/player-list"><h2> Players Ranking</h2></a> 
+      </div>
+    </div>
+    <div class = "col">   
+      <div class="panel-heading">
+        <a routerLink = "/adminlogin"><h2> Admin</h2></a> 
+      </div>
+    </div>
   </div>
 </div>
-<div class = "col">   
-   <div class="panel-heading">
-     <a routerLink = "/adminlogin"><h2> Admin</h2></a> </div>
-</div>
-</div>
+
