admin player form

--- a/game-app/src/app/component/footer/footer.component.html
+++ b/game-app/src/app/component/footer/footer.component.html
@@ -1,9 +1,9 @@
+
 <!-- Footer -->
-<footer class="page-footer font-small blue pt-4">
-
-
-<h3>Develop by:</h3> 
-<h4> Abdallahman Habyarimana - 101087205</h4>
-<h4>Renata Moura - 101096098</h4>
+<footer class="page-footer font-small blue">
+  <h3> Developed by: </h3>
+  <h4> Abdallahman Habyarimana - 101087205</h4>
+  <h4>Renata Moura - 101096098</h4>
 
 </footer>
+<!-- Footer -->
