--- a/game-app/src/app/component/mainpage/mainpage.component.html
+++ b/game-app/src/app/component/mainpage/mainpage.component.html
@@ -10,6 +10,23 @@
         <a routerLink = "/adminlogin"><h2> Admin</h2></a> 
       </div>
     </div>
+
+
+
+    <div class = "col">   
+        <div class="panel-heading">
+          <a routerLink = "/admin-addplayer"><h2> AddPlayer</h2></a> 
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
   </div>
 </div>
 
