--- a/game-app/src/app/component/admin-addplayer/admin-addplayer.component.html
+++ b/game-app/src/app/component/admin-addplayer/admin-addplayer.component.html
@@ -1,3 +1,73 @@
-<p>
-  admin-addplayer works!
-</p>
+
+  <h3>Add Players</h3> 
+  <div class="container">
+  <form>
+    <div class="form-group">
+        <div class="form-group col-md-6">
+          <label> Player:   </label>
+          <input  type="inputPlayer" id="inputPlayer" placeholder="Player Name">
+        </div>
+    </div>
+  
+    <div class="form-group col-md-4">
+      <label>Rank:    </label>
+        <select id="inputRank">
+          <option selected>Select a Rank:</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+          <option>6</option>
+          <option>7</option>
+          <option>8</option>
+          <option>9</option>
+          <option>10</option>
+        </select>
+    </div>
+
+    <div class="form-group">
+      <div class="form-group col-md-6">   
+        <label> Player Score:   </label>
+        <input  type="text" id="inputPlayerScore" placeholder="Player Score">
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <div class="form-group col-md-6"> 
+        <label> Player Time:   </label>
+        <input  type="text" id="inputPlayerTime" placeholder="Player Time">
+      </div>
+    </div>
+
+    <div class="form-group col-md-4">
+    <label>Favorite Game: </label>
+       <select id="favoriteGame">
+          <option selected>Select a Game:</option>
+           <option>Game 1</option>
+           <option>Game 2</option>
+           <option>Game 3</option>
+           <option>Game 4</option>
+           <option>Game 5</option>
+           <option>Game 6</option>
+           <option>Game 7</option>
+           <option>Game 8</option>
+           <option>Game 9</option>
+           <option>Game 10</option>
+        </select>
+  </div>  
+      
+  <div class="form-group col-md-4">
+    <label>Satus:</label>
+    <select id="playerStatus">
+      <option selected>Select a Status:</option>
+      <option>Available</option>
+      <option>Unavailable</option>
+    </select>
+  </div>  
+<div>
+  <button class="btn btn-primary" type="submit" id="addbutton">Add</button>
+  <button class="btn btn-primary" type="submit"id="cancelbutton" >Cancel</button>
+</div>
+  </form>
+  </div>
