--- a/game-app/src/app/component/mainpage/mainpage.component.scss
+++ b/game-app/src/app/component/mainpage/mainpage.component.scss
@@ -1,6 +1,9 @@
 #container{
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
+    padding: 10px;
+    height: 100px;
+    width: 300px;
     
 }
 
