--- a/game-app/src/app/component/adminlogin/adminlogin.component.scss
+++ b/game-app/src/app/component/adminlogin/adminlogin.component.scss
@@ -1,3 +1,5 @@
+@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
+
 .container{
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
